字体策略更新
字体策略更新

--- a/app/templates/src4pc/sass/global.scss
+++ b/app/templates/src4pc/sass/global.scss
@@ -7,7 +7,7 @@
 
 /* 全局变量配置 */
 $base-font-size          : 12px !default; // 字号
-$base-font-family        : Tahoma, Arial, "Helvetica Neue", Helvetica, sans-serif !default; // 字体族
+$base-font-family        : "PingFang sc", "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif !default; // 字体族
 $base-line-height        : 1.5 !default; // 行号
 $base-color              : #333 !default; // 字体颜色
 $base-bg-color           : #fff !default; // 背景颜色
