更新移动端字体策略

--- a/app/templates/src4mobi/sass/base/_base.scss
+++ b/app/templates/src4mobi/sass/base/_base.scss
@@ -10,7 +10,7 @@
 *,
 *:before,
 *:after{
-	font-family: "Microsoft YaHei","微软雅黑",Helvetica, "Droid Sans", sans-serif;
+	font-family: PingFang sc, Verdana, Helvetica Neue, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 			box-sizing: border-box;
